--- a/cpp00/.vscode/settings.json
+++ b/cpp00/.vscode/settings.json
@@ -1,22 +1,17 @@
 {
     "files.associations": {
-        ".fantomasignore": "ignore",
-        "__bit_reference": "cpp",
         "__locale": "cpp",
         "__verbose_abort": "cpp",
-        "array": "cpp",
         "bitset": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
         "cmath": "cpp",
-        "cstdarg": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
-        "ctime": "cpp",
         "cwchar": "cpp",
+        "cwctype": "cpp",
         "initializer_list": "cpp",
+        "iomanip": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
@@ -25,29 +20,33 @@
         "locale": "cpp",
         "mutex": "cpp",
         "new": "cpp",
-        "optional": "cpp",
         "print": "cpp",
-        "queue": "cpp",
+        "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
         "string_view": "cpp",
         "typeinfo": "cpp",
+        "__bit_reference": "cpp",
         "__hash_table": "cpp",
         "__node_handle": "cpp",
         "__split_buffer": "cpp",
+        "array": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
         "complex": "cpp",
-        "cwctype": "cpp",
+        "cstdarg": "cpp",
+        "ctime": "cpp",
         "deque": "cpp",
         "execution": "cpp",
         "memory": "cpp",
+        "optional": "cpp",
+        "queue": "cpp",
         "ratio": "cpp",
-        "sstream": "cpp",
         "stack": "cpp",
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp",
-        "iomanip": "cpp"
+        "algorithm": "cpp"
     }
 }
