modified ex01 where the form is signed, created shrubberyCreationform

--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -2,11 +2,11 @@ CXX			= c++
 CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
 RM 			= rm -rf
 
-NAME		= ex01
+NAME		= ex02
 
-SRC			= main.cpp Bureaucrat.cpp AForm.cpp
+SRC			= main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp
 OBJ			= $(SRC:%.cpp=%.o)
-HEADERS		= Bureaucrat.hpp AForm.hpp
+HEADERS		= Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp
 
 all:		$(NAME)
 
